# DigitalMarking

./: Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
frontend/: readme
msp/: Dockerfile  docker-compose.yml
msp/core/: admin.py  api_views.py  models.py  serializers.py  urls.py  utils.py  views.py
msp/core/migrations/: 0001_initial.py  0002_markingcode_movementlog_productbatch.py  0003_markingcode_batch.py  0004_location.py
msp/core/templates/: track_product.html
msp/core/templates/admin/: batch_change_list.html
msp/core/templates/admin/core/productbatch/: change_form.html
msp/marking_system/: asgi.py  settings.py  urls.py  wsgi.py
